Fix overlapping background issue in buttons

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,14 +1,21 @@
 .buttonContainer {
     font-family: Pricedown;
-    padding: 0.3em 0.5em;
+    padding: 0.02em 0.5em;
     max-width: 180px;
     max-height: 56px;
     font-size: 48px;
     color: white;
     user-select: none;
-    transition: linear 0.1s;
+    transition: linear 0.05s;
+    position: relative; /* Ensure proper stacking context */
+    z-index: 2;
+}
+
+.text {
+    
 }
 
 .buttonContainerHover {
+    z-index: 1;
     background-color: #198344;
 }
